[gd_scene load_steps=13 format=3 uid="uid://mapkirkt220t"]

[ext_resource type="Script" path="res://scripts/levels_menu.gd" id="1_kbkvj"]
[ext_resource type="Texture2D" uid="uid://crnqmyx8w6sb2" path="res://assets/sprites/gameuiBack.png" id="2_ms2cm"]
[ext_resource type="Texture2D" uid="uid://ca7kjlnqyk5hi" path="res://assets/sprites/levels_logo.png" id="3_2ugf2"]
[ext_resource type="Texture2D" uid="uid://610omsgeolyq" path="res://assets/sprites/Buttons/right.png" id="4_v33n1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vq2lk"]
texture = ExtResource("2_ms2cm")
modulate_color = Color(0.481789, 0.481789, 0.481789, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lfd8w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apbiu"]
bg_color = Color(0.833178, 0.858045, 0.349673, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkxhg"]
bg_color = Color(0.833178, 0.858045, 0.349673, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ll7d"]
bg_color = Color(0.833178, 0.858045, 0.349673, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06dp8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qdog2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_32wpa"]

[node name="Levels Menu" type="Node2D"]
script = ExtResource("1_kbkvj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vq2lk")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -206.5
offset_top = 180.0
offset_right = 206.5
offset_bottom = 319.0
grow_horizontal = 2
texture = ExtResource("3_2ugf2")

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = -68.0
offset_right = 502.0
offset_bottom = 68.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="level_1" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfd8w")
theme_override_styles/hover = SubResource("StyleBoxFlat_apbiu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vkxhg")
theme_override_styles/normal = SubResource("StyleBoxFlat_4ll7d")
text = "1"

[node name="level_2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxEmpty_lfd8w")
theme_override_styles/hover = SubResource("StyleBoxFlat_apbiu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vkxhg")
theme_override_styles/normal = SubResource("StyleBoxFlat_4ll7d")
text = "2"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 48.0
offset_top = 42.0
offset_right = 219.0
offset_bottom = 195.0

[node name="back" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_06dp8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qdog2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_32wpa")
icon = ExtResource("4_v33n1")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/back" to="." method="_on_back_pressed"]
